--- a/CCLE.Rmd
+++ b/CCLE.Rmd
@@ -30,7 +30,12 @@ sourceCpp("functions/add_decomp_function.cpp")
 ```{r}
 Y <- fread("resp_mat.csv")[, -1]
 m <- ncol(Y)
-names(Y) <- paste0("g", 1:m)
+trt_nm <- readLines("trt_nm.txt", encoding = "UTF-8") %>%
+  str_split(pattern = ",") %>%
+  sapply(FUN = function(x) str_remove_all(x, pattern = "'") %>% str_trim) %>%
+  unlist()
+trt_nm <- trt_nm[trt_nm != ""]
+names(Y) <- trt_nm
 
 Y_sd <- Y[, lapply(.SD, sd)] %>% as.matrix %>% t()
 data.frame(Y_sd) %>%
@@ -38,10 +43,13 @@ data.frame(Y_sd) %>%
   select(group, Y_sd) %>%
   arrange(Y_sd) %>% head(5)
 
-Y <- Y[, -"g11"] %>% scale()
+Y <- Y[, -"Panobinostat"] 
 m <- ncol(Y)
-trt_name <- colnames(Y)
 ```
+
+
+
+
 
 group 11의 sd = 0.08 -> 제거
 
@@ -83,7 +91,9 @@ idx_scr_cor <- cor(X, Y) %>% abs %>%
   data.frame(variable = names(.), cor = .) %>%
   arrange(-cor) %>% first(p) %>% .$variable
 
-X <- select(X, idx_scr_cor) %>% scale() %>% cbind(1, .)
+X <- select(X, idx_scr_cor) %>% 
+  apply(MARGIN = 2, FUN = function(x) (x - mean(x))/(sd(x)*sqrt((n-1)/n))) %>%
+  cbind(1, .)
 colnames(X)[1] <- "intercept"
 gene_ex <- colnames(X)
 ```
@@ -104,10 +114,10 @@ V <- calc_V(as.matrix(X), Phi)
 
 
 ```{r}
-max_iter <- 50
-delta <- 0.01
-lambda_1 <- 0.01
-lambda_2 <- 0.08
+max_iter <- 100
+delta <- 0.2
+lambda_1 <- 0.5
+lambda_2 <- 1
 tol_error <- 0.1
 
 start <- Sys.time()
@@ -138,27 +148,13 @@ sum(sing_val[1:1])/sum(sing_val)
 rankMatrix(result$alpha)
 ```
 
-
 ```{r}
-gamma_hat <- est_gamma(Phi, result$theta)
-
-gamma_sing_val <- svd(gamma_hat[[3]]) %>% 
-  .$d
-
-sum(gamma_sing_val[1:3])/sum(gamma_sing_val)
-(gamma_sing_val > 0.1^5) %>% sum
+gamma_hat <- est_gamma(Phi = Phi, theta = result$theta)
 ```
 
-```{r}
-gamma_hat %>% lapply(FUN = function(x) svd(x) %>% .$d %>% 
-                       data.frame(index = 1:m, sing_val = .)) %>%
-  `names<-`(value = tau_seq) %>%
-  bind_rows(.id = "tau") %>%
-  ggplot(aes(x = index, y = sing_val)) +
-  geom_point(aes(color = tau)) +
-  labs(title = expression("singular value in estimated"~Gamma~"("~tau~")")) +
-  coord_fixed(ratio = 1.5)
-```
+
+
+
 
 
 
@@ -214,6 +210,9 @@ lapply(gamma_hat, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)),
     axis.ticks.y = element_blank()) +
   ggtitle(expression("all of"~Gamma~"("~tau[l]~")"))
 ```
+
+
+
 ```{r}
 idx_ex <- data.frame(col = rep(1:m, each = (p+1)), 
            row = rep(1:(p+1), m),
@@ -228,7 +227,7 @@ idx_ex <- data.frame(col = rep(1:m, each = (p+1)),
 ```{r}
 gamma_hat[[3]][idx_ex, ] %>% as(., "dgCMatrix") %>% round(2) %>%
   `rownames<-`(value = gene_ex[idx_ex]) %>%
-  `colnames<-`(value = trt_name) 
+  `colnames<-`(value = trt_nm) 
 ```
 
 
