--- a/Toy_Example.Rmd
+++ b/Toy_Example.Rmd
@@ -20,6 +20,7 @@ library(doParallel)
 library(Rcpp)
 library(glmnet)
 library(fda)
+library(corpcor)
 
 sourceCpp("functions/add_decomp_function.cpp")
 source("https://raw.githubusercontent.com/S0Hye0NKim/add_decomp/master/functions/add_decomp_function.R")
@@ -57,8 +58,11 @@ for(j in 1:p) {
 }
 
 X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n)
-X <- X %*% expm::sqrtm(sigma_mat) %>%
-    cbind(rep(1, n), .)
+svd_X <- svd(X)
+D_X <- svd_X$d
+D_X[(num_rank+3):ncol(X)] <- 0
+X <- svd_X$u %*% diag(D_X) %*% t(svd_X$v) 
+X <- X %>% cbind(rep(1, n), .)
   
 col_ind <- sample(1:m, size = m, replace = FALSE)
 row_ind <- sample(1:(p+1), size = m)
@@ -67,9 +71,9 @@ for(i in 1:m) {
    sp_mat[row_ind[i], col_ind[i]] <- rnorm(1, mean = 5, sd = 0.1)
 }
 
-LR_mat <- matrix(rnorm((p+1)*m, mean = 1, sd = 3), ncol = m) # make low rank matrix using SVD
+LR_mat <- matrix(rnorm((p+1)*m, mean = 0, sd = 1), ncol = m) # make low rank matrix using SVD
 SVD <- svd(LR_mat)
-D_mat <- diag(SVD$d)
+D_mat <- diag(runif(num_rank, min = 2, max = 2.3) %>% sort(decreasing = TRUE), nrow = length(SVD$d))
 idx <- (num_rank+1):min(m, p)
 D_mat[idx, idx] <- 0
 LR_mat <- SVD$u %*% D_mat %*% t(SVD$v)
@@ -102,7 +106,7 @@ $$\rho_\tau(x) = (\tau - \mathbb{I}(x<0))x$$
 ```{r}
 K <- 10
 tau_seq <- seq(from = 0.35, to = 0.65, length.out = b)
-tau_seq_real <- tau_seq[tau_seq >= 0.4 & tau_seq <= 0.6]
+tau_seq_real <- tau_seq[tau_seq >= "0.4" & tau_seq <= "0.6"]
 
 knots_seq <- seq(min(tau_seq)- 0.02, max(tau_seq) + 0.02, length.out = K)
 Phi <- fda::bsplineS(tau_seq, breaks= knots_seq, norder=2, nderiv=0, returnMatrix=FALSE)
@@ -159,123 +163,64 @@ for(g in 1:m) {
 
 Y_modified <- Y - X%*%lasso_coef
 
-lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
-alpha_init <- lin_model$coefficients
-
-init_val <- add_decomp_r(delta = 1, lambda_1 = 13, lambda_2 = 80, tol_error = 0.1, max_iter = 10,
-                       X = X, Y = Y, V = V, Phi = Phi, 
-                     theta_0 = theta_init, alpha_0 = alpha_init, tau_seq = tau_seq, weight = FALSE)
-
-```
-
-
-```{r}
-BIC_func <- function(X, Y, V, Phi, theta_0, alpha_0, tau_seq, tau_seq_real, lamb1_seq, lamb2_seq, 
-                     max_iter) {
-  m <- ncol(Y)
-  p <- ncol(X) - 1
-  K <- ncol(V[[1]])/(p+1)
-  idx_tau <- tau_seq %in% tau_seq_real
-  
-  # iteration for lamb1_seq and lamb2_seq
-  cores=detectCores()
-  cl <- makeCluster(cores[1]-2) #not to overload your computer
-  registerDoParallel(cl) # Ready to parallel
-  
-  simulation <- foreach(lambda_1 = lamb1_seq, .noexport = "add_decomp") %:%
-    foreach(lambda_2 = lamb2_seq, .noexport = "add_decomp") %dopar% {
-      library(tidyverse)
-      library(splines)
-      library(Matrix)
-      library(Rcpp)
-      library(glmnet)
-      library(fda)
-      sourceCpp("functions/add_decomp_function.cpp")
-      
-      result <- add_decomp(delta = 1, lambda_1 = lambda_1, lambda_2 = lambda_2, tol_error = 0.001, 
-                           max_iter = max_iter, X = X, Y = Y, V = V, Phi = Phi, 
-                           theta_0, alpha_0, tau_seq = tau_seq)
-      
-      result
-    }
-  stopCluster(cl)
-  
-  simulation <- lapply(simulation, FUN = function(x) `names<-`(x, value = paste0("lambda_2=", lamb2_seq)))
-  names(simulation) <- paste0("lambda_1=", lamb1_seq)
-  
-  BIC <- list()
-  for(i in 1:length(lamb1_seq)) {
-    BIC[[i]] <- list()
-    for(j in 1:length(lamb2_seq)) {
-      result <- simulation[[i]][[j]]
-      est_error <- lapply(V[idx_tau], FUN = function(x) (Y - X %*% result$alpha - x %*% result$theta)
-                          %>% as.vector())
-      check_loss_err <- mapply(FUN = function(x, tau) check_ft(x, tau), x = est_error, 
-                               tau = as.list(tau_seq_real), SIMPLIFY = FALSE) %>%
-        lapply(FUN = function(x) sum(x)/n) %>% unlist %>% sum
-      gamma_tau_hat <- est_gamma(Phi[idx_tau, ], result$theta)
-      S_hat <- check_sp_table(true = matrix(0, nrow = (p+1), ncol = m), 
-                              est = gamma_tau_hat, table = TRUE, tol = 0.1^5, tau_seq = tau_seq_real) %>%
-        .$Est_Positive %>% sum
-      BIC[[i]][[j]] <- data.frame(log_Q = log(check_loss_err), 
-                                  r_hat = rankMatrix(result$alpha)[1], 
-                                  S_hat = S_hat)
-    }
-  }
-  
-  BIC_data <- lapply(BIC, FUN = function(x) `names<-`(x, value = lamb2_seq) %>% 
-                       bind_rows(.id = "lambda_2")) %>%
-    `names<-`(value = lamb1_seq) %>%
-    bind_rows(.id = "lambda_1") %>%
-    mutate(term = (r_hat * (m + p - r_hat) + K * S_hat)/(2*n*m), 
-           BIC_log_sum = log_Q + log(p+m)*term, 
-           BIC_log_p = log_Q + log(p)*term, 
-           BIC_log_n = log_Q + log(n)*term, 
-           BIC_llog_p = log_Q + log(log(p))*term,
-           BIC_llog_n = log_Q + log(log(n))*term) %>%
-    group_by(lambda_1, lambda_2) %>%
-    select_at(vars(starts_with("BIC"))) %>%
-    ungroup()
-  
-  BIC_val_min <- apply(select_at(BIC_data, vars(starts_with("BIC"))), 2, min) %>%
-    `names<-`(value = c("log_sum", "log_p", "log_n", "llog_p", "llog_n"))
-  
-  min_BIC <- filter(BIC_data, BIC_log_sum == BIC_val_min["log_sum"]| BIC_log_p == BIC_val_min["log_p"] |
-                      BIC_log_n == BIC_val_min["log_n"] | BIC_llog_p == BIC_val_min["llog_p"] | 
-                      BIC_llog_n == BIC_val_min["llog_n"])
-  
-  output <- list(min_BIC = min_BIC, 
-                 BIC_data = BIC_data, 
-                 simulation = simulation)
-  
-  
-  return(output)
+ridge_coef <- matrix(nrow = p+1, ncol = m)
+for(g in 1:m) {
+  cv.ridge <- cv.glmnet(x = X[, -1], y = Y_modified[, g], alpha = 0, type.measure = "mae")
+  ridge_model <- glmnet(X[, -1], Y_modified[, g], family = "gaussian", alpha = 0, lambda = cv.ridge$lambda.min)
+  ridge_coef[, g] <- c(ridge_model$a0, as.vector(ridge_model$beta))
 }
+alpha_init <- ridge_coef
+
+init_val <- add_decomp_r(delta = 1, lambda_1 = 0.01, lambda_2 = 0.1, tol_error = 0.1, max_iter = 50,
+                       X = X, Y = Y, V = V, Phi = Phi, 
+                     theta_0 = theta_init, Z_0 = X%*%alpha_init, tau_seq = tau_seq, weight = FALSE)
+
 ```
 
-```{r}
-lamb1_seq <- seq(10, 40, by = 10)
-lamb2_seq <- seq(1000, 8000, by = 1000)
 
-BIC_simul <- BIC_func(X, Y, V, Phi, theta_0 = init_val$theta, alpha_0 = init_val$alpha, tau_seq, tau_seq_real, lamb1_seq = lamb1_seq, lamb2_seq = lamb2_seq, max_iter = 50)
+
+
+$$\begin{aligned}BIC=&\;log\bigg(\sum_{g=1}^m\sum_{\ell=1}^b\sum_{i=1}^n\frac{1}{n}\rho_{\tau_\ell}(Y_i^{(g)}-X\hat{\alpha}^{(g)}-V^{(\ell)}\hat{\theta}^{(g)})\bigg)\\&+\Big(Penalty\Big)\Big(\frac{r\cdot\text{max}(r_X,m)+K|\mathcal{A}|}{2nm}\Big)\end{aligned}$$
+
+
+```{r BIC_simul}
+lamb1_seq <- c( seq(0.01, 0.1, by = 0.01))
+lamb2_seq <- c(seq(0.9, 1.1, by = 0.1))
+
+BIC_simul <- BIC_func(X, Y, V, Phi, theta_0 = init_val$theta, Z_0 = init_val$Z, tau_seq, tau_seq_real, lamb1_seq = lamb1_seq, lamb2_seq = lamb2_seq, max_iter = 50)
 ```
 
+ * log(log(p))
 
-```{r}
-BIC_lamb1 <- BIC_simul$min_BIC$lambda_1
-BIC_lamb2 <- BIC_simul$min_BIC$lambda_2
-
+```{r BIC_simul}
+#BIC_lamb1 <- BIC_simul$min_BIC$lambda_1
+#BIC_lamb2 <- BIC_simul$min_BIC$lambda_2
+BIC_lamb1 <- "0.08"
+BIC_lamb2 <- "1"
 
 result <- BIC_simul$simulation[[which(lamb1_seq == BIC_lamb1)]][[which(lamb2_seq == BIC_lamb2)]]
+```
+
+
+
+```{r lasso -> ridge}
+max_iter <- 50
+delta <- 1
+lambda_1 <- 0.1
+lambda_2 <- 1
+tol_error <- 0.1^5
+
+result <- add_decomp(delta, lambda_1, lambda_2, tol_error = tol_error, max_iter, X, Y, V, Phi, 
+                     theta_0 = init_val$theta, Z_0 = init_val$Z, tau_seq = tau_seq)
 ```
 
 
 $\lambda_1, \lambda_2, \delta$ 어떻게?
 
 
-```{r}
+```{r iter_error_plot}
 result$iter_error %>% 
-  `colnames<-`(value = c("eta", "theta", "alpha", "e", "u", "w")) %>% 
+  `colnames<-`(value = c("eta", "theta", "Z", "e", "u", "w")) %>% 
   na.omit() %>%
   data.frame %>%
   mutate(iter = 1:nrow(.)) %>%
@@ -305,14 +250,15 @@ Y_hat_tau <- lapply(V, FUN = function(x) x %*% result$theta + X %*% result$alpha
 $$\frac{\sigma_1+\cdots+\sigma_5}{\sigma_1+\cdots+\sigma_{20}}\quad\text{where }\sigma_i\text{ is a singular value}$$
 
 ```{r}
-sing_val <- svd(result$alpha)$d
+sing_val <- svd(result$Z)$d
 sum(sing_val[1:5])/sum(sing_val)
-rankMatrix(result$alpha)
+rankMatrix(result$Z)
 ```
-$$\frac{||\hat{A}-A||_F}{||A||_F}$$
+$$\frac{||\hat{Z}-Z||_F}{||Z||_F}$$
+
 
 ```{r}
-norm(result$alpha - LR_mat, "F")/norm(LR_mat, "F")
+norm(result$Z - X%*%LR_mat, "F")/norm(X%*%LR_mat, "F")
 ```
 
 
@@ -363,26 +309,26 @@ sp_heat <- data.frame(col = rep(1:m, each = (p+1)),
     axis.ticks.y = element_blank()) +
   ggtitle(expression(Gamma~"("~0.5~")")) 
 
-#gamma_heat <- data.frame(col = rep(1:m, each = (p+1)), 
-           #row = rep(1:(p+1), m),
-           #value = as.vector(gamma_tau_hat[[11]])) %>%
-  #mutate(value = ifelse(abs(value) < 0.1^5, 0, value)) %>%
-  #ggplot(aes(x = col, y = -row, fill = value)) +
-  #geom_tile(color = "grey") +
-  #scale_fill_gradient2(low = "red",mid = "white", high = "blue") +
-  #theme_bw() +
-  #theme(axis.line = element_blank(),
-    #panel.grid.major = element_blank(),
-    #panel.grid.minor = element_blank(),
-    #panel.border = element_blank(),
-    #panel.background = element_blank(), 
-    #axis.title.x = element_blank(), 
-    #axis.text.x = element_blank(), 
-    #axis.ticks.x = element_blank(), 
-    #axis.title.y = element_blank(), 
-    #axis.text.y = element_blank(), 
-    #axis.ticks.y = element_blank()) +
-  #ggtitle(expression(Gamma~"("~tau[11]~")"))
+gamma_heat <- data.frame(col = rep(1:m, each = (p+1)), 
+           row = rep(1:(p+1), m),
+           value = as.vector(gamma_tau_hat[[5]])) %>%
+  mutate(value = ifelse(abs(value) < 0.1^5, 0, value)) %>%
+  ggplot(aes(x = col, y = -row, fill = value)) +
+  geom_tile(color = "grey") +
+  scale_fill_gradient2(low = "red",mid = "white", high = "blue") +
+  theme_bw() +
+  theme(axis.line = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank(),
+    panel.background = element_blank(), 
+    axis.title.x = element_blank(), 
+    axis.text.x = element_blank(), 
+    axis.ticks.x = element_blank(), 
+    axis.title.y = element_blank(), 
+    axis.text.y = element_blank(), 
+    axis.ticks.y = element_blank()) +
+  ggtitle(expression(Gamma~"("~tau[11]~")"))
 
 
 common_zero_heat <- lapply(gamma_tau_hat, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)),
@@ -411,7 +357,7 @@ common_zero_heat <- lapply(gamma_tau_hat, FUN = function(x) data.frame(col = rep
     axis.ticks.y = element_blank()) +
   ggtitle(expression(Gamma~"("~tau[l]~")")) 
 
-#grid.arrange(sp_heat, gamma_heat, nrow = 1)
+grid.arrange(sp_heat, gamma_heat, nrow = 1)
 grid.arrange(sp_heat, common_zero_heat, nrow = 1)
 ```
 
@@ -437,7 +383,11 @@ gamma_tau_hat %>%
   geom_line(aes(x = tau, y = value, group = index, color = index), size = 1.2) +
   labs(x = expression(tau[l]), title = expression(gamma~"("~tau[l]~")"~Delta~"=[0.4,0.6]"))
 ```
+
+
 ```{r}
+idx_nz_true <- which(sp_mat != 0, arr.ind = TRUE) %>% data.frame()
+
 entry_sp_mat <- data.frame(row = rep(1:(p+1), m), col = rep(1:m, each = p+1), true = sp_mat %>% as.vector ) %>%
   unite(col = index, row, col, sep = ",") %>%
   mutate(index = paste0("(", index, ")"))
@@ -484,6 +434,21 @@ RE <- (EE_mat %>% apply(2, mean) %>% sum %>% sqrt)/(RE_denom %>% apply(2, mean) 
 RE
 ```
 
+### Estimation Error
+
+$$Est.err = \sqrt{||\hat{\Theta}-\Theta||_F^2+||\hat{Z}-Z||_F^2}$$
+
+```{r}
+true_theta <- matrix(nrow = (p+1)*K, ncol = m)
+for(g in 1:m) {
+  for(j in 0:p) {
+    true_theta[((j*K)+1):((j+1)*K), g] <- sp_mat[j+1, g]
+  }
+}
+
+sqrt(norm(true_theta - result$theta, "F")^2 + norm(X%*%LR_mat - result$Z)^2)
+```
+
 
 
 ### Objective function
@@ -517,46 +482,54 @@ check_loss_err + lambda_1*low_rank_penalty + lambda_2 * sparse_penalty
 
 $$\frac{||\hat{A}-A||_F}{||A||_F}$$
 
-```{r eval = FALSE}
-lamb_1_seq <- seq(from = 0.05, to = 0.3, by = 0.05)
-simul_lamb1 <- list()
 
-for(idx in 1:length(lamb_1_seq)) {
-  simul_lamb1[[idx]] <- add_decomp(delta = 0.5, lambda_1 = lamb_1_seq[idx], lambda_2 = 2.5,
-                                   tol_error = 0.1, max_iter = 50)
-  if((idx %% 2) == 1) print(paste0("iter = ", idx))
-}
+
+```{r}
+lamb1_seq <- seq(1, 20, by = 1)
+
+simul <- BIC_func(X, Y, V, Phi, theta_0 = init_val$theta, alpha_0 = init_val$alpha, tau_seq, tau_seq_real, lamb1_seq = lamb1_seq, lamb2_seq = 2000, max_iter = 50)
+
+simulation <- simul$simulation
 ```
 
+
+```{r}
+simulation %>% lapply(FUN = function(x) x[[1]] %>% .$alpha) %>% length
+```
+
+
+
 ```{r eval = FALSE}
-alpha_hat <- simul_lamb1 %>% lapply(FUN = function(x) x$alpha)
+alpha_hat <- simulation %>% lapply(FUN = function(x) x[[1]] %>% .$alpha)
 
 alpha_hat %>%
   lapply(FUN = function(x) norm(LR_mat - x, type = "F")/norm(LR_mat, type = "F") %>% data.frame(value = .)) %>%
-  `names<-`(value = lamb_1_seq) %>%
+  `names<-`(value = lamb1_seq) %>%
   bind_rows(.id = "lambda_1") %>%
   ggplot() +
   geom_line(aes(x = as.numeric(lambda_1), y = value)) +
-  labs(title = expression("Frobenius norm ratio when "~delta~"=0.1, "~lambda[2]~"=0.5, "~lambda[1]~"in (0.05,0.3)"), 
+  labs(title = expression("Frobenius norm ratio when "~delta~"=0.1, "~lambda[2]~"=2000, "~lambda[1]~"in (1,20)"), 
        x = expression(lambda[1]))
 ```
 
 
-
-```{r eval = FALSE}
-lapply(alpha_hat, FUN = function(x) svd(x) %>% .$d) %>%
-  lapply(FUN = function(x) data.frame(ratio = (sum(x[1:num_rank])/sum(x)), rank = sum(abs(x) > 0.1^5))) %>%
-  `names<-`(value = lamb_1_seq) %>%
-  bind_rows(.id = "lambda1")
+```{r}
+lapply(alpha_hat, FUN = function(x) rankMatrix(x) %>% data.frame(rank = .)) %>%
+  `names<-`(value = lamb1_seq) %>%
+  bind_rows(.id = "lambda_1") %>%
+  mutate(lambda_1 = as.numeric(lambda_1)) %>%
+  ggplot() +
+  geom_line(aes(x = lambda_1, y = rank)) +
+  labs(title = expression("rank when "~delta~"=0.1, "~lambda[2]~"=2000, "~lambda[1]~"in (1,20)"), 
+       x = expression(lambda[1]))
 ```
-
 
 
 ### ROC curve
 
 
 ```{r}
-lamb2_seq <- c(10, 50, 100, seq(500, 4000, by = 100), 6000, 8000, 10000)
+lamb2_seq <- c(1, 5, 10, 50, 100, seq(500, 4000, by = 100), 6000, 8000, 10000)
 
 simul <- BIC_func(X, Y, V, Phi, theta_0 = init_val$theta, alpha_0 = init_val$alpha, tau_seq, tau_seq_real, lamb1_seq = 10, lamb2_seq = lamb2_seq, max_iter = 50)
 
@@ -565,6 +538,8 @@ simulation <- simul$simulation[[1]]
 
 
 ```{r eval = FALSE}
+idx_tau <- (tau_seq >= 0.4 & tau_seq <= 0.6)
+
 theta_hat <- simulation %>%
   lapply(FUN = function(x) x$theta)
 
@@ -588,7 +563,7 @@ ROC_table %>%
   geom_point(aes(x = FPR, y = TPR)) +
   geom_abline(intercept = 0, slope = 1) +
   coord_fixed(ratio = 1) +
-  ggtitle(label = expression(delta ~ " =1, "~lambda[1] ~ "=10, "~lambda[2] ~ "in (10, 10000), max_iter = 50")) +
+  ggtitle(label = expression(delta ~ " =1, "~lambda[1] ~ "=10, "~lambda[2] ~ "in (1, 10000), max_iter = 50")) +
   scale_y_continuous(limits = c(0, 1)) +
   scale_x_continuous(limits = c(0, 1))
   
@@ -609,9 +584,41 @@ lapply(alpha_hat, FUN = function(x) data.frame(FR_ratio = norm(x - LR_mat, "F")/
   coord_fixed(ratio = 2) 
 ```
 
+# Parameter boundary
+
+```{r}
+Phi_l2_norm <- apply(Phi, 1, FUN = function(x) x^2 %>% sum %>% sqrt) %>% sum
+max_lambda_2 <- 0
+
+for(g in 1:m) {
+  for(j in 1:(p+1)) {
+    theta_tilde <- init_val$theta[(K*(j-1) +1):(j*K), g]
+    norm_theta_tilde <- (theta_tilde^2) %>% sum %>% sqrt   # weight = 1/norm_theta_tilde
+    col_sum <- sum(abs(X[, j]))
+    max_cand <- col_sum * Phi_l2_norm * norm_theta_tilde / (n*b)
+    max_lambda_2 <- max(max_lambda_2, max_cand)
+  }
+}
+
+max_lambda_2
+```
 
 
+```{r}
+op_norm_sum <- 0
+for(l in 1:b) {
+  tau_ell <- tau_seq[l]
+  entry <- max(tau_ell, 1-tau_ell)
+  T_ell <- matrix(entry, nrow = n, ncol = m)
+  op_norm <- svd(T_ell) %>% .$d %>% .[1]
+  op_norm_sum <- op_norm_sum + op_norm
+}
 
+op_L0 <- svd(init_val$alpha) %>% .$d %>% .[1]
+max_lambda_1 <- op_norm_sum/(n*b*op_L0)
+
+max_lambda_1
+```
 
 
 
