--- a/Simulation.Rmd
+++ b/Simulation.Rmd
@@ -28,10 +28,14 @@ source("https://raw.githubusercontent.com/S0Hye0NKim/add_decomp/master/functions
 
 
 
-$$\tilde{\textbf{x}}_i\overset{i.i.d}{\sim}N_p(0,\Sigma)\text{ with }\Sigma_{jk}=0.3^{|j-k|}$$
 
 # Case 1. 
 
+$$\tilde{\textbf{x}}_i\overset{i.i.d}{\sim}N_{10}(0,\Sigma)\text{ with }\Sigma_{jk}=0.3^{|j-k|}$$
+
+$$X_j=X_{j-10}-X_{j-9} \text{ for }j=11,\cdots,20$$
+
+$$X_j=2X_{j-20}+X_{j-18}\text{ for }j=21,\cdots, 30$$
 
 $$\epsilon_i^{(g)}(\tau)\sim N(0, \sigma_i^{(g)2})\text{ where }\sigma_i\overset{i.i.d}{\sim}U(0.3, 0.7)$$
 
@@ -43,13 +47,14 @@ set.seed(0)
 n <- 400
 m <- 10
 p <- 30
-b <- 31
+b <- 15
 num_rank <- 5
+num_rank_X <- 10
 simul_times <- 100
 
-sigma_mat <- matrix(nrow = p, ncol = p)
-for(j in 1:p) {
-  for(k in 1:p) {
+sigma_mat <- matrix(nrow = num_rank_X, ncol = num_rank_X)
+for(j in 1:num_rank_X) {
+  for(k in 1:num_rank_X) {
     sigma_mat[j, k] <- 0.3^(abs(j-k))
   }
 }
@@ -60,9 +65,14 @@ sp_mat_list <- list()
 eps_list <- list()
 
 for(simul in 1:simul_times) {
-  X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n)
-  X_list[[simul]] <- X %*% expm::sqrtm(sigma_mat) %>%
-    cbind(rep(1, n), .)
+  X <- matrix(rnorm(n*num_rank_X, mean = 0, sd = 1), nrow = n)
+  X <- X %*% expm::sqrtm(sigma_mat)
+  X <- cbind(X, X, X)
+  for(j in 11:20) {
+    X[, j] <- X[, j-10] + X[, j-9]
+    X[, (j+10)] <- X[, j-10] + X[, j-8]
+  }
+  X_list[[simul]] <- X %>% cbind(rep(1, n), .)
   
   col_ind <- sample(1:m, size = m, replace = FALSE)
   row_ind <- sample(1:(p+1), size = m)
@@ -71,10 +81,10 @@ for(simul in 1:simul_times) {
     sp_mat_list[[simul]][row_ind[i], col_ind[i]] <- rnorm(1, mean = 5, sd = 0.1)
   }
   
-  LR_mat <- matrix(rnorm((p+1)*m, mean = 1, sd = 0.1), ncol = m) # make low rank matrix using SVD
+  LR_mat <- matrix(rnorm((p+1)*m, mean = 0, sd = 1), ncol = m) # make low rank matrix using SVD
   SVD <- svd(LR_mat)
-  D_mat <- diag(SVD$d)
-  idx <- (num_rank+1):m
+  D_mat <- diag(runif(num_rank, min = 2, max = 2.3) %>% sort(decreasing = TRUE), nrow = length(SVD$d))
+  idx <- (num_rank+1):min(m, p)
   D_mat[idx, idx] <- 0
   LR_mat_list[[simul]] <- SVD$u %*% D_mat %*% t(SVD$v)
   
@@ -88,6 +98,8 @@ Y_list <- mapply(FUN = function(X, LR, SP, eps) X %*% (LR + SP) + eps,
 
 
 ```
+
+
 
 
 ---
@@ -104,7 +116,7 @@ set.seed(0)
 n <- 400
 m <- 10
 p <- 30
-b <- 21
+b <- 15
 num_rank <- 5
 simul_times <- 100
 
@@ -168,7 +180,7 @@ set.seed(0)
 n <- 400
 m <- 10
 p <- 30
-b <- 21
+b <- 15
 num_rank <- 5
 simul_times <- 100
 
@@ -226,7 +238,7 @@ Y_list <- mapply(FUN = function(X, LR, SP, eps) X %*% (LR + SP) + eps,
 ```{r}
 K <- 10
 tau_seq <- seq(from = 0.35, to = 0.65, length.out = b)
-tau_seq_real <- tau_seq[tau_seq > 0.39 & tau_seq < 0.61]
+tau_seq_real <- tau_seq[tau_seq >= 0.4 & tau_seq  <= 0.6]
 
 knots_seq <- seq(min(tau_seq)- 0.02, max(tau_seq) + 0.02, length.out = K)
 Phi <- fda::bsplineS(tau_seq, breaks= knots_seq, norder=2, nderiv=0, returnMatrix=FALSE)
@@ -245,7 +257,6 @@ start <- Sys.time()
 cores=detectCores()
 cl <- makeCluster(cores[1]-2) #not to overload your computer
 registerDoParallel(cl) # Ready to parallel
-
 simulation <- foreach(simul = 1:simul_times, .noexport = "add_decomp") %dopar% {
   library(tidyverse)
   library(splines)
@@ -276,18 +287,32 @@ simulation <- foreach(simul = 1:simul_times, .noexport = "add_decomp") %dopar% {
   }
   
   Y_modified <- Y - X%*%lasso_coef
-  lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
-  alpha_init <- lin_model$coefficients
-
-  result <- add_decomp(delta = 1, lambda_1 = 8, lambda_2 = 40, tol_error = 0.1, max_iter = 300,
-                       X = X, Y = Y, V = V, Phi = Phi, 
-                     theta_0 = theta_init, alpha_0 = alpha_init, tau_seq = tau_seq)
+  ridge_coef <- matrix(nrow = p+1, ncol = m)
+  for(g in 1:m) {
+    cv.ridge <- cv.glmnet(x = X[, -1], y = Y_modified[, g], alpha = 0, type.measure = "mae")
+    ridge_model <- glmnet(X[, -1], Y_modified[, g], family = "gaussian", alpha = 0, lambda = cv.ridge$lambda.min)
+    ridge_coef[, g] <- c(ridge_model$a0, as.vector(ridge_model$beta))
+    }
+  alpha_init <- ridge_coef
+  
+  init_val <- add_decomp_r(delta = 1, lambda_1 = 0.03, lambda_2 = 0.01, tol_error = 0.1, max_iter = 50,
+                           X = X, Y = Y, V = V, Phi = Phi, 
+                           theta_0 = theta_init, Z_0 = X%*%alpha_init, tau_seq = tau_seq, weight = FALSE)
+  
+  lamb1_seq <- c( seq(0.005, 0.015, by = 0.002))
+  lamb2_seq <- c(seq(1, 4, by = 0.5))
+  BIC_simul <- BIC_func(X, Y, V, Phi, theta_0 = init_val$theta, Z_0 = init_val$Z, tau_seq, tau_seq_real, 
+                        lamb1_seq = lamb1_seq, lamb2_seq = lamb2_seq, max_iter = 50)
+  
+  BIC_params <- BIC_simul$min_BIC %>%
+    arrange(BIC_log_p) %>%
+    head(1)
+  
+  result <- BIC_simul$simulation[[which(lamb1_seq == BIC_params$lambda_1)]][[which(lamb2_seq == BIC_params$lambda_2)]]
+  
   result
   
 }
-
-
-
 stopCluster(cl)
 end <- Sys.time()
 ```
@@ -334,13 +359,13 @@ for(simul in 1:(cores[1]-2)) {
 ## 3-1. Low rank matrix
 
 ```{r}
-alpha_list <- lapply(simulation, FUN = function(x) x$alpha)
+Z_list <- lapply(simulation, FUN = function(x) x$Z)
 
-sapply(alpha_list, rankMatrix) %>% mean
+sapply(Z_list, rankMatrix) %>% mean
 ```
 
 ```{r}
-lapply(alpha_list, FUN= function(x) svd(x) %>% .$d) %>%
+lapply(Z_list, FUN= function(x) svd(x) %>% .$d) %>%
   sapply(FUN = function(x) sum(x[1:5])/sum(x)) %>% mean
 ```
 
@@ -349,7 +374,7 @@ lapply(alpha_list, FUN= function(x) svd(x) %>% .$d) %>%
 ```{r}
 theta_list <- lapply(simulation, FUN = function(x) x$theta)
 
-idx_tau <- (tau_seq > 0.39 & tau_seq <= 0.61)
+idx_tau <- (tau_seq >= 0.4 & tau_seq <= 0.6)
 gamma_list <- lapply(theta_list, FUN = function(x) est_gamma(Phi[idx_tau, ], theta = x))
 ```
 
@@ -403,11 +428,18 @@ set.seed(0)
 n <- 400
 m <- 10
 p <- 30
-b <- 31
+#num_nz <- 15   #round((p+1)*m*(1/5)) 
+b <- 15
 num_rank <- 5
 
 X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n) %>% cbind(1, .)   #add intercept term in X
 
+#sp_mat <- rsparsematrix(nrow = p+1, ncol = m, nnz = num_nz)             # make sparse matrix
+#for(i in 1:(p+1)) {
+  #for(j in 1:m) {
+    #if(abs(sp_mat[i, j]) != 0) {sp_mat[i, j] <- rnorm(1, mean = 5, sd = 0.1)}
+  #}
+#}
 col_ind <- sample(1:m, size = m, replace = FALSE)
 row_ind <- sample(1:(p+1), size = m)
 sp_mat <- matrix(0, nrow = p+1, ncol = m)
@@ -449,7 +481,7 @@ V <- calc_V(X, Phi)
 cores=detectCores()
 cl <- makeCluster(cores[1]-2) #not to overload your computer
 registerDoParallel(cl) # Ready to parallel
-lamb1_seq <- c(1:10, 15, 20, 30, 35)
+lamb1_seq <- seq(0.000001, 0.0005, 0.000005)
 
 simulation <- foreach(lambda_1 = lamb1_seq, .noexport = "add_decomp") %dopar% {
   library(tidyverse)
@@ -481,9 +513,9 @@ simulation <- foreach(lambda_1 = lamb1_seq, .noexport = "add_decomp") %dopar% {
   lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
   alpha_init <- lin_model$coefficients
   
-  result <- add_decomp_r(delta = 1, lambda_1 = lambda_1, lambda_2 = 20, tol_error = 0.1,max_iter = 300,
+  result <- add_decomp(delta = 1, lambda_1 = lambda_1, lambda_2 = 200, tol_error = 0.1,max_iter = 50,
                        X = X, Y = Y, V = V, Phi = Phi, 
-                     theta_0 = theta_init, alpha_0 = alpha_init)
+                     theta_0 = theta_init, alpha_0 = alpha_init, tau_seq = tau_seq)
   result
 }
 
@@ -516,7 +548,7 @@ for(i in 1:(cores[1]-2)) {
   Y_modified <- Y - X%*%lasso_coef
   lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
   alpha_init <- lin_model$coefficients
-  result <- add_decomp(delta = 1, lambda_1 = lamb1_seq[i], lambda_2 = 20, tol_error = 0.1, max_iter = 300,
+  result <- add_decomp(delta = 1, lambda_1 = lamb1_seq[i], lambda_2 = 40, tol_error = 0.1, max_iter = 300,
                        X = X, Y = Y, V = V, Phi = Phi, 
                      theta_0 = theta_init, alpha_0 = alpha_init, tau_seq = tau_seq)
   simulation[[i]] <- result
@@ -535,6 +567,43 @@ data.frame(lambda_1 = lamb1_seq, rank = rank) %>%
   expand_limits(y = c(0, 10))
 ```
 
+$$\begin{aligned}\text{Integrate }\Gamma(\tau) &= \sqrt{\int_\Delta \Gamma(\tau)^2 d\tau}\quad\text{          where }\tau_\ell\in[0.4, 0.6]\\&=\sqrt{\sum_{\ell=1}^bh\times\Gamma^2(\tau_\ell)}\end{aligned}$$
+
+
+```{r}
+h <- tau_seq[2] - tau_seq[1]
+theta_list <- lapply(simulation, FUN = function(x) x$theta)
+
+idx_tau <- (tau_seq >= 0.4 & tau_seq <= 0.6)
+gamma_list <- lapply(theta_list, FUN = function(x) est_gamma(Phi[idx_tau, ], theta = x))
+
+ex <- gamma_list[[1]]
+nz_idx_true <- which(abs(sp_mat) > 0.1^5, arr.ind = TRUE) %>% as_tibble
+nz_idx_est <- lapply(ex, FUN = function(x) which(abs(x) > 0.1^5, arr.ind = TRUE) %>% as_tibble) %>%
+    bind_rows (.id = "tau") %>%
+    group_by(row, col) %>%
+    summarise(count = n()) %>%
+  mutate(nonzero = ifelse(count == length(tau_seq_real), "all", "partial"))
+
+nz_est_list <- list()
+for(i in 1:length(lamb1_seq)) {
+  gamma_hat_tau <- gamma_list[[i]]
+  nz_est_list[[i]] <- lapply(gamma_hat_tau, 
+                             FUN = function(x) which(abs(x) > 0.1^5, arr.ind = TRUE) %>% as_tibble) %>%
+    bind_rows (.id = "tau") %>%
+    group_by(row, col) %>%
+    summarise(count = n())
+}
+
+nz_est_list %>% `names<-`(value = lamb1_seq) %>%
+  bind_rows(.id = "lambda_1") %>%
+  mutate(index = paste0("(", row, ",", col, ")"), 
+         lambda_1 = as.numeric(lambda_1)) %>%
+  ungroup() %>%
+  select(-row, -col) %>%
+  spread(key = index, value = count)
+
+```
 
 
 
@@ -544,7 +613,7 @@ data.frame(lambda_1 = lamb1_seq, rank = rank) %>%
 cores=detectCores()
 cl <- makeCluster(cores[1]-2) #not to overload your computer
 registerDoParallel(cl) # Ready to parallel
-lamb2_seq <- c(seq(5, 60, by = 5), seq(70, 200, by = 20))
+lamb2_seq <- seq(300, 20000, by = 200)
 
 simulation <- foreach(lambda_2 = lamb2_seq, .noexport = "add_decomp") %dopar% {
   library(tidyverse)
@@ -576,7 +645,8 @@ simulation <- foreach(lambda_2 = lamb2_seq, .noexport = "add_decomp") %dopar% {
   lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
   alpha_init <- lin_model$coefficients
   
-  result <- add_decomp(delta = 1, lambda_1 = 4, lambda_2 = lambda_2, tol_error = 0.1,max_iter = 300,
+  result <- add_decomp(delta = 1, lambda_1 = 0.000011, lambda_2 = lambda_2, 
+                       tol_error = 0.1,max_iter = 50,
                        X = X, Y = Y, V = V, Phi = Phi, 
                      theta_0 = theta_init, alpha_0 = alpha_init, tau_seq = tau_seq)
   result
